--- a/style.css
+++ b/style.css
@@ -2,27 +2,45 @@
     background-color: teal;
 }
 .a {
+    
     display: flex;
+    /*background-image: url(../landing_page/images/logo.png);
+    background-repeat: space;
+    background-position: bottom;*/
     background-color: transparent;
-    color:darkslateblue;
+    
+    color:rgb(255, 255, 255);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: bold;
     font-size: 30px;
-    flex:auto;
+    flex:2 1 auto;
     text-decoration: none;
+    /*padding: 14px 16px;*/
+    margin-left: auto;
+    text-align: center;
+    justify-content: center;
+    
+   
 
 }
 .nav{
     display:flex;
-    flex-direction:row;
-    flex: auto;
-    border: 5px dotted navajowhite;
-    background-color: darkcyan;
+    width: 100%;
+    /*background-image: url(../landing_page/images/water.jpg);*/
     list-style: none;
     align-items: center;
-    margin: 0;
-    padding: 0;
-    gap: 5px;
+    /*text-align: center;*/
+    margin: 60px 0px 20px;
+    gap: 20px;
 
     
+}
+.blog{
+    display: none;
+   /* background-image: url(../landing_page/images/water.jpg);
+    background-size: auto;*/
+    
+}
+.footer{
+    display: none;
 }
