--- a/style.css
+++ b/style.css
@@ -4,34 +4,38 @@
 .a {
     
     display: flex;
-    /*background-image: url(../landing_page/images/logo.png);
+    background-image: url(../landing_page/images/logo.png);
     background-repeat: space;
-    background-position: bottom;*/
+    background-position: bottom;
     background-color: transparent;
-    
     color:rgb(255, 255, 255);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: bold;
     font-size: 30px;
-    flex:2 1 auto;
     text-decoration: none;
-    /*padding: 14px 16px;*/
-    margin-left: auto;
-    text-align: center;
-    justify-content: center;
     
-   
-
+    
 }
+
+.logo {
+    display: flex;
+    height: 26px;
+    margin-left: 24px;
+    align-content: space-around;
+ 
+}
+
+
+
 .nav{
     display:flex;
     width: 100%;
-    /*background-image: url(../landing_page/images/water.jpg);*/
+    background-image: url(../landing_page/images/water.jpg);
     list-style: none;
+    justify-content:space-evenly;
+    gap: 8px;
     align-items: center;
-    /*text-align: center;*/
-    margin: 60px 0px 20px;
-    gap: 20px;
+   
 
     
 }
