--- a/style.css
+++ b/style.css
@@ -18,20 +18,21 @@
 .logo {
     display: flex;
     height: 24px;
-    margin: 0px;
-    padding: 1px;
-    align-content: space-around;
-    justify-items: center;
+    flex-direction:column;
+    align-content:center;
+    justify-items:left;
  
 }
 
 .nav{
     display:flex;
     width: 100%;
+    margin: 10px 0px;
+    padding: 0px; 
     background-image: url(../landing_page/images/water.jpg);
     list-style: none;
-   justify-content: flex-end;
-    gap: 110px;
+    justify-content: right;
+    gap: 80px;
     
    
 
@@ -39,13 +40,29 @@
 }
 .blog{
     display: flex;
-    background-color: teal;
+    background-color: rgb(27, 33, 58);
+    font-size: 18px;
+    align-items: center;
+    color: #e5e7eb;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin: 4px;
+    padding: auto;
    /* background-image: url(../landing_page/images/water.jpg);
     background-size: auto;*/
+
    
     
+}
+.p1 {
+    display: flex;
+    color: #f9fAf8;
+    font-size: 48px;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight:bolder;
 }
 .footer{
     display: flex;
     background-color: darkblue;
+    text-align: center;
+    align-items: center;
 }
