--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@
     display: flex;
     height: 24px;
     flex-direction:column;
-    align-content:center;
-    justify-items:left;
+    /*justify-items:flex-start center space-evenly;*/
+    align-items: flex-start center;
  
 }
 
@@ -40,14 +40,14 @@
 }
 .blog{
     display: flex;
+    flex-direction: column;
     background-color: rgb(27, 33, 58);
-    font-size: 18px;
-    align-items: center;
+    /*align-items: flex-end;
     color: #e5e7eb;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    margin: 0px;
-    padding: auto;
-   /* background-image: url(../landing_page/images/water.jpg);
+    margin: 0px;*/
+    /*padding: auto;
+    background-image: url(../landing_page/images/water.jpg);
     background-size: auto;*/
 
    
@@ -59,10 +59,20 @@
     font-size: 48px;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight:bolder;
+    /*justify-content: flex-start center space-evenly;
+    align-items: flex-start center space-evenly;*/
 }
+.p2, .p3 {
+    display: flex;
+    color: #f9fAf8;
+    font-size: 18px;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: center;
+    /*justify-content: flex-start center space-evenly;
+    align-items: flex-start center space-evenly;*/
+}    
 .footer{
     display: flex;
-    background-color: darkblue;
-    text-align: center;
-    align-items: center;
+    background-color: #1f2937;
+    justify-content: center;
 }
