--- a/style.css
+++ b/style.css
@@ -16,11 +16,15 @@
     
 }
 .logo {
-    display: flex;
-    height: 24px;
+    display:flex;
+    margin: 10px 10px;
+    /*padding: 10px 10px;
+    height: 50px;
     flex-direction:column;
-    /*justify-items:flex-start center space-evenly;*/
-    align-items: flex-start center;
+   
+    align-items:flex-end;*/
+    justify-items:center;
+    align-items: center;
  
 }
 
@@ -33,14 +37,16 @@
     list-style: none;
     justify-content: right;
     gap: 80px;
-    
+     text-align:center;
+    font-size: 20px;
+    color: whitesmoke;
    
 
     
 }
 .blog{
-    display: flex;
-    flex-direction: column;
+    /*display: flex;
+    flex-direction: column;*/
     background-color:#1f2937;
     /*align-items: flex-end;
     color: #e5e7eb;
@@ -54,7 +60,7 @@
     
 }
 .p1 {
-    display: flex;
+    /*display: flex;*/
     color: #f9fAf8;
     font-size: 48px;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -63,11 +69,11 @@
     align-items: flex-start center space-evenly;*/
 }
 .p2, .p3 {
-    display: flex;
+   /* display: flex;*/
     color: #f9fAf8;
     font-size: 18px;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    text-align: center;
+    text-align:justify;
     /*justify-content: flex-start center space-evenly;
     align-items: flex-start center space-evenly;*/
 }    
@@ -77,6 +83,7 @@
     flex-wrap: wrap;*/
     justify-content: center;
     align-items: center;
+    padding: 10px;
 
     
     /*margin: 10px 100px;
