--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 .body{
     background-color:#3c3d46;
 }
@@ -17,15 +18,23 @@
 }
 .logo {
     display:flex;
-    margin: 10px 10px;
-    /*padding: 10px 10px;
-    height: 50px;
-    flex-direction:column;
+    /*hmargin: 10px 10px;*/
+    padding: 0px 60px;
+    /*height: 50px;
+    flex-direction:column;*/
    
-    align-items:flex-end;*/
+    align-items:center;
     justify-items:center;
     align-items: center;
  
+}
+.h1{
+    display: flex;
+    font-size: 24px;
+    text-align: start;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+   
+    
 }
 
 .nav{
@@ -33,20 +42,21 @@
     width: 100%;
     margin: 10px 0px;
     padding: 0px; 
-    background-image: url(../landing_page/images/water.jpg);
+    /*background-image: url(../landing_page/images/water.jpg);*/
+    background-color: #1f2937;
     list-style: none;
     justify-content: right;
     gap: 80px;
      text-align:center;
-    font-size: 20px;
+    font-size: 24px;
     color: whitesmoke;
    
 
     
 }
 .blog{
-    /*display: flex;
-    flex-direction: column;*/
+    display: flex;
+    /*flex-direction: column;*/
     background-color:#1f2937;
     /*align-items: flex-end;
     color: #e5e7eb;
