--- a/style.css
+++ b/style.css
@@ -127,7 +127,36 @@
     font-size: 36px;
     height: 200px;
 }
-
+.sign_u{
+    display: flex;
+    width:100%;
+    background-color: #3882F6;
+}
+.button_2{
+    display: flex;
+    width: 100%;
+    font-weight: bolder;
+    border-radius: 50%;
+    border-color: whitesmoke;
+    border: solid;
+    background-color: #3882F6;
+    height: 30px;
+    width: 100px;
+    align-items: center;
+    justify-content: center;
+    padding: 0px;
+    margin: 5%;
+    margin-inline-start: 152px;
+    margin-top: -80px;
+    text-decoration: none;
+}    
+.button_2:visited{
+    color:whitesmoke;
+}
+.button_2:active{
+    position:relative;
+    top: 1px;
+}
 .footer{
     display:flex;
     width: 100%;
