index.html and style.css

--- a/style.css
+++ b/style.css
@@ -129,8 +129,12 @@
 }
 .sign_u{
     display: flex;
-    width:100%;
+    width:50%;
+    height: 200px;
     background-color: #3882F6;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 .button_2{
     display: flex;
