--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@
     width: 40%;
     height: 215px;
     align-content: center;
+    transform:scale(110%);
   
    
 }    
@@ -143,6 +144,7 @@
     font-weight: bold;
     color:#E5E7EB;
     font-size: 36px;
+    transform:scale(80%);
 }
 .button_2{
     display: flex;
