--- a/style.css
+++ b/style.css
@@ -39,7 +39,8 @@
     display: flex;
     flex-direction: column;
     background-color:#1f2937;
-    padding: 40px;
+    /*padding: 40px;*/
+    width: 100%;
 }
 .p1 {
     display: flex;
