--- a/style.css
+++ b/style.css
@@ -1,88 +1,84 @@
+
 /*.body{
-    background-color:#3c3d46;
+    
+   background-color:#3c3d46;
 }*/
 .a {   
     display: flex;
     background-color: transparent;
     color:rgb(255, 255, 255);
-    font-family:'Courier New', Courier, monospace;
-    font-weight: bold;
-    font-size: 18px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-decoration: none;
+    font-size: 18px;
+    
 }
 .logo {
     display:flex;
-    padding-inline-start:150px;
-    align-items:center;
-    justify-items:center;
     align-items: center;
+    justify-content:center;
+    align-items: center;
+    padding-inline-start: 220px;
+    margin: 25px 0px 25px;
 }
 .h1{
     display: flex;
     font-size: 24px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
+    justify-content:center;
+    align-items:center;
+    color:#f9faf8;
+    
 }
 .nav{
     display:flex;
     width: 100%;
     background-color: #1f2937;
     list-style: none;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items:center;
-    font-size: 24px;
-    color: whitesmoke;
+    color: #E5E7EB;
+    gap: 100px;
+    align-content: center;
+    
+   
+    
 }
 .blog{
     display: flex;
     flex-direction: column;
     background-color:#1f2937;
-    /*padding: 40px;*/
+    padding-bottom: 100px;
     width: 100%;
 }
-.p1 {
+.p1, .p2, .p3 {
     display: flex;
     color: #f9fAf8;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin: 20px 0px 20px;
+    padding-inline-start: 220px;
+}
+
+.p1 {
     font-size: 48px;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight:bolder;
-    margin-top: 100px;
-    margin-inline-start: 100px;
-    padding-inline-start: 50px;
-    justify-content:first baseline;
-    align-items: center;
+    padding-top: 100px;
 }
 .p2, .p3 {
-    display: flex;
-    flex-direction: column;
-    color: #f9fAf8;
     font-size: 18px;
-    padding: 0px;
-    margin-inline-start: 152px;
-    margin-top: -50px;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-   
-    justify-content:flex-start;
-    align-items:flex-start;
+    margin-top:-20px;
+    
 }
 .button{
     display: flex;
-    width: 100%;
+    width: 100px;
     font-weight: bolder;
     border-radius: 50%;
-    border-color: whitesmoke;
     background-color: #3882F6;
     height: 30px;
-    width: 100px;
     align-items: center;
-    justify-content: center;
-    padding: 0px;
-    margin: 5%;
-    margin-inline-start: 152px;
-    margin-top: -80px;
+    justify-content:center;
     text-decoration: none;
+    margin-inline-start: 220px;
 }    
 .button:visited{
     color:whitesmoke;
@@ -95,17 +91,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 10px;
-    margin: 10px 895px;
-    margin-top: -150px;
     background-color: grey;
     color: whitesmoke;
-    width: 40%;
-    height: 215px;
     align-content: center;
-    transform:scale(110%);
-  
-   
+    height: 300px;
+    width: 40%;
+    transform:scale(80%);
+    margin-top: -250px;
+    margin-inline-start: 760px;
 }    
 .Schaukasten {
     display: flex;
