--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-
-/*.body{
-    
-   background-color:#3c3d46;
-}*/
 .a {   
     display: flex;
     background-color: transparent;
@@ -54,7 +49,7 @@
     color: #f9fAf8;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin: 20px 0px 20px;
-    padding-inline-start: 240px;
+    padding-inline-start: 220px;
 }
 
 .p1 {
@@ -77,7 +72,7 @@
     align-items: center;
     justify-content:center;
     text-decoration: none;
-    margin-inline-start: 250px;
+    margin-inline-start: 230px;
 }    
 .button:visited{
     color:whitesmoke;
@@ -95,16 +90,40 @@
     align-content: center;
     height: 300px;
     width: 40%;
-    transform:scale(80%);
+    transform:scale(75%);
     margin-top: -230px;
-    margin-inline-start: 820px;
+    margin-inline-start: 780px;
 }    
 .Schaukasten {
     display: flex;
-    font-size: 36px;
+    flex-direction: row;
     font-weight: bolder;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     justify-content: center;
+    align-items: center; 
+    
+    
+}
+.h1_2{
+    display: flex;
+    color:#1f2937;
+    font-size: 36px;
+    font-weight: bolder;
+    align-items: center;
+    justify-content:center;
+    text-align: center;
+   
+   
+    
+}
+.p4{
+    display:flex;
+    flex-direction: row;
+    font-size: 18px;
+   /* margin: 10px 10px 10px;*/
+    margin-top: 120px;
+    margin-bottom: 50px;
+    justify-content: space-evenly;
     align-items: center;
     
 }
@@ -120,6 +139,7 @@
     color: #1f2937;
     font-size: 36px;
     height: 200px;
+    font-weight: lighter;
 }
 .sign_u{
     display: flex;
