--- a/style.css
+++ b/style.css
@@ -97,10 +97,10 @@
 .Schaukasten {
     display: flex;
     flex-direction: row;
-    font-weight: bolder;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     justify-content: center;
-    align-items: center; 
+    align-items: center;
+    margin-top: 10px;
     
     
 }
