--- a/style.css
+++ b/style.css
@@ -138,44 +138,34 @@
     font-style: italic;
     color: #1f2937;
     font-size: 36px;
-    height: 200px;
+    height: 250px;
     font-weight: lighter;
 }
 .sign_u{
     display: flex;
-    flex-direction: row;
-    width:50%;
+    width:80%;
     height: 200px;
     background-color: #3882F6;
-    justify-content:center;
+    justify-content:space-between;
     align-items: center;
-    /*position:relative;
-    margin: 50px;
-    padding: 0px;*/
-    margin-inline-start: 360px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: bold;
     color:#E5E7EB;
     font-size: 36px;
-    transform:scale(80%);
+    margin: 100px 0px 100px;
+    margin-inline-start: 200px;
+    text-align: center;
+    
+    
 }
 .button_2{
     display: flex;
     width: 100%;
     font-weight: bolder;
-    border-radius: 50%;
-    border-color: whitesmoke;
-    border: solid;
-    background-color: #3882F6;
-    height: 30px;
-    width: 100px;
-    align-items: center;
-    justify-content: center;
-    padding: 0px;
-    margin: 5%;
-    margin-inline-start: 152px;
-    margin-top: -80px;
+    text-align: center;
     text-decoration: none;
+    justify-content: space-evenly;
+    border: #E5E7EB 1px;
 }    
 .button_2:visited{
     color:whitesmoke;
