--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@
 }
 .sign_u{
     display: flex;
-    width:80%;
+    width:70%;
     height: 200px;
     background-color: #3882F6;
     justify-content:space-between;
@@ -151,24 +151,27 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: bold;
     color:#E5E7EB;
-    font-size: 36px;
+    font-size: 24px;
     margin: 100px 0px 100px;
-    margin-inline-start: 200px;
+    margin-inline-start: 230px;
     text-align: center;
     
     
 }
 .button_2{
     display: flex;
-    width: 100%;
+    width: 80px;
     font-weight: bolder;
+    align-items: center;
     text-align: center;
     text-decoration: none;
     justify-content: space-evenly;
-    border: #E5E7EB 1px;
+    margin-top: -217px;
+    margin-inline-start: 1200px;
+    margin-bottom: 180px;
 }    
 .button_2:visited{
-    color:whitesmoke;
+    color:#E5E7EB;
 }
 .button_2:active{
     position:relative;
