--- a/style.css
+++ b/style.css
@@ -143,32 +143,51 @@
 }
 .sign_u{
     display: flex;
+    flex-direction: column;
     width:70%;
     height: 200px;
     background-color: #3882F6;
-    justify-content:space-between;
-    align-items: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: bold;
+    justify-content:center;
+    align-items:center;
+   
     color:#E5E7EB;
-    font-size: 24px;
-    margin: 100px 0px 100px;
-    margin-inline-start: 230px;
-    text-align: center;
     
+    margin: 100px 0px 100px;    
+    margin-inline-start: 250px;
     
 }
+.p5 {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: bolder;
+    font-size: 24px;
+    margin-inline-start: -500px;
+    text-align: center;
+    
+}
+.p6 {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight:normal;
+    font-size: 24px;
+    margin-top: -28px;
+    margin-inline-start: -450px;
+    text-align: center;
+}
+
 .button_2{
     display: flex;
-    width: 80px;
+    font-size: 24px;
+    flex-direction: column;
+    border-radius: 30%;
+    border:solid #E5E7EB;
+    width: 18%;
     font-weight: bolder;
     align-items: center;
     text-align: center;
     text-decoration: none;
-    justify-content: space-evenly;
-    margin-top: -217px;
-    margin-inline-start: 1200px;
-    margin-bottom: 180px;
+    justify-content: center;
+    margin-inline-start: 350px;
+    margin-top: -57px;
+    
 }    
 .button_2:visited{
     color:#E5E7EB;
