--- a/style.css
+++ b/style.css
@@ -143,36 +143,33 @@
 }
 .sign_u{
     display: flex;
-    flex-direction: column;
-    width:65%;
+   /* flex-direction: row;*/
+    flex-wrap: wrap;
+    width:900px;
     height: 150px;
     background-color: #3882F6;
-    justify-content:center;
+    justify-content:space-evenly;
     align-items:center;
     color:#E5E7EB;
-    
-    margin: 90px 0px 90px;    
-    margin-inline-start: 300px;
+    margin: 100px 100px;    
+    margin-inline-start: 550px;
     
 }
 .p5 {
+    display: flex;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: bolder;
     font-size: 24px;
-    margin-inline-start: -765px;
     text-align: center;
-    justify-content:center;
-    align-items:center;
+    
 }
 .p6 {
+    display: flex;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight:normal;
     font-size: 24px;
-    margin-top: -28px;
-    margin-inline-start: -450px;
     text-align: center;
-    justify-content:center;
-    align-items:center;
+   
 }
 
 .button_2{
@@ -180,15 +177,14 @@
     font-size: 24px;
     flex-direction: column;
     border-radius: 30%;
-    border:solid #E5E7EB;
-    width: 18%;
+    border: 3px solid #E5E7EB;
+    width: 100%;
     font-weight: bolder;
     align-items: center;
     text-align: center;
     text-decoration: none;
     justify-content: center;
-    margin-inline-start: 400px;
-    margin-top: -57px;
+   
     
 }    
 .button_2:visited{
@@ -201,8 +197,8 @@
 .footer{
     display:flex;
     width: 100%;
+    height: 100px;
     background-color: #1f2937;
-    list-style: none;
     justify-content: space-evenly;
     align-items:center;
     font-size: 24px;
