--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@
 }
 .sign_u{
     display: flex;
-   /* flex-direction: row;*/
+    flex-direction: column;
     flex-wrap: wrap;
     width:900px;
     height: 150px;
@@ -153,6 +153,7 @@
     color:#E5E7EB;
     margin: 100px 100px;    
     margin-inline-start: 550px;
+    margin-right: 10px;
     
 }
 .p5 {
@@ -161,6 +162,8 @@
     font-weight: bolder;
     font-size: 24px;
     text-align: center;
+    margin-inline-start: -500px;
+    margin-top: 10px;
     
 }
 .p6 {
@@ -169,6 +172,7 @@
     font-weight:normal;
     font-size: 24px;
     text-align: center;
+    margin-inline-start: -185px;
    
 }
 
@@ -178,12 +182,13 @@
     flex-direction: column;
     border-radius: 30%;
     border: 3px solid #E5E7EB;
-    width: 100%;
+    width: 30%;
     font-weight: bolder;
     align-items: center;
     text-align: center;
     text-decoration: none;
-    justify-content: center;
+    margin-inline-start: 500px;
+    margin-top: -75px;
    
     
 }    
@@ -201,6 +206,6 @@
     background-color: #1f2937;
     justify-content: space-evenly;
     align-items:center;
-    font-size: 24px;
+    font-size: 18px;
     color: whitesmoke;
 }
