--- a/style.css
+++ b/style.css
@@ -4,8 +4,7 @@
     color:rgb(255, 255, 255);
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-decoration: none;
-    font-size: 18px;
-    
+    font-size: 18px;    
 }
 .logo {
     display:flex;
@@ -21,8 +20,7 @@
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     justify-content:center;
     align-items:center;
-    color:#f9faf8;
-    
+    color:#f9faf8;    
 }
 .nav{
     display:flex;
@@ -33,9 +31,7 @@
     align-items:center;
     color: #E5E7EB;
     gap: 100px;
-    align-content: center;
-     
-    
+    align-content: center;    
 }
 .blog{
     display: flex;
@@ -51,7 +47,6 @@
     margin: 20px 0px 20px;
     padding-inline-start: 220px;
 }
-
 .p1 {
     font-size: 48px;
     font-weight:bolder;
@@ -100,9 +95,7 @@
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     justify-content: center;
     align-items: center;
-    margin-top: 10px;
-    
-    
+    margin-top: 10px;      
 }
 .h1_2{
     display: flex;
@@ -111,21 +104,16 @@
     font-weight: bolder;
     align-items: center;
     justify-content:center;
-    text-align: center;
-   
-   
-    
+    text-align: center;    
 }
 .p4{
     display:flex;
     flex-direction: row;
     font-size: 18px;
-   /* margin: 10px 10px 10px;*/
     margin-top: 120px;
     margin-bottom: 50px;
     justify-content: space-evenly;
-    align-items: center;
-    
+    align-items: center;   
 }
 .quotes{
     display: flex;
@@ -145,7 +133,7 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    width:900px;
+    width:800px;
     height: 150px;
     background-color: #3882F6;
     justify-content:space-evenly;
@@ -153,8 +141,7 @@
     color:#E5E7EB;
     margin: 100px 100px;    
     margin-inline-start: 550px;
-    margin-right: 10px;
-    
+    margin-right: 10px;   
 }
 .p5 {
     display: flex;
@@ -163,8 +150,7 @@
     font-size: 24px;
     text-align: center;
     margin-inline-start: -500px;
-    margin-top: 10px;
-    
+    margin-top: 10px;  
 }
 .p6 {
     display: flex;
@@ -172,25 +158,23 @@
     font-weight:normal;
     font-size: 24px;
     text-align: center;
-    margin-inline-start: -185px;
-   
+    margin-inline-start: -190px;
+    margin-top: -20px; 
 }
-
 .button_2{
     display: flex;
     font-size: 24px;
     flex-direction: column;
-    border-radius: 30%;
-    border: 3px solid #E5E7EB;
+    border-radius: 35%;
+    border: 1px solid #E5E7EB;
     width: 30%;
-    font-weight: bolder;
+    height: 35px;
+    font-weight: bold;
     align-items: center;
     text-align: center;
     text-decoration: none;
     margin-inline-start: 500px;
-    margin-top: -75px;
-   
-    
+    margin-top: -71px;   
 }    
 .button_2:visited{
     color:#E5E7EB;
