--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+.body{
+    
+    flex-direction: column;
+    
+    display: flex;    
+    
+}
 .a {   
     display: flex;
     background-color: transparent;
@@ -37,8 +44,9 @@
     display: flex;
     flex-direction: column;
     background-color:#1f2937;
-    padding-bottom: 100px;
     width: 100%;
+    height: 450px;
+    
 }
 .p1, .p2, .p3 {
     display: flex;
