--- a/style.css
+++ b/style.css
@@ -105,6 +105,15 @@
     align-items: center;
     margin-top: 10px;      
 }
+.InhaltSK {
+    display: flex;
+    /*flex-direction: row;*/
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 40px;
+    margin-top: 40px;
+    margin-bottom: -80px;
+}
 .h1_2{
     display: flex;
     color:#1f2937;
@@ -116,12 +125,14 @@
 }
 .p4{
     display:flex;
-    flex-direction: row;
+    /*flex-direction: row;*/
     font-size: 18px;
-    margin-top: 120px;
+    margin-top: 40px;
     margin-bottom: 50px;
+    margin-inline-start: -20px;
     justify-content: space-evenly;
     align-items: center;   
+    gap: 40px;
 }
 .quotes{
     display: flex;
