--- a/style.css
+++ b/style.css
@@ -88,14 +88,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    
-   
     align-content: center;
     height: 300px;
     width: 40%;
     transform:scale(75%);
     margin-top: -230px;
-    margin-inline-start: 780px;
+    margin-inline-start: 800px;
 }    
 .Schaukasten {
     display: flex;
@@ -107,10 +105,8 @@
 }
 .InhaltSK {
     display: flex;
-    /*flex-direction: row;*/
     justify-content: space-evenly;
     align-items: center;
-    gap: 40px;
     margin-top: 40px;
     margin-bottom: -80px;
 }
@@ -125,22 +121,22 @@
 }
 .p4{
     display:flex;
-    /*flex-direction: row;*/
     font-size: 18px;
-    margin-top: 40px;
+    margin-top: 50px;
     margin-bottom: 50px;
-    margin-inline-start: -20px;
-    justify-content: space-evenly;
-    align-items: center;   
-    gap: 40px;
+    text-align: center;
+   
+    justify-content: center;
+    align-items: center;
+    gap: 120px;
+    
 }
 .quotes{
     display: flex;
     width: 100%;
     background-color: #E5E7EB;
-    position: relative;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-style: italic;
     color: #1f2937;
