--- a/style.css
+++ b/style.css
@@ -1,10 +1,3 @@
-.body{
-    
-    flex-direction: column;
-    
-    display: flex;    
-    
-}
 .a {   
     display: flex;
     background-color: transparent;
@@ -206,5 +199,5 @@
     justify-content: space-evenly;
     align-items:center;
     font-size: 18px;
-    color: whitesmoke;
+    color: #E5E7EB;
 }
